Revisi Footer, Font, Foto Halaman Home, Galeri V-4

--- a/contact.html
+++ b/contact.html
@@ -51,11 +51,11 @@
           <div class="row">
             <!-- <div class="col-lg-2" style="padding-top: 18rem;"></div> -->
             <div class="col-lg-6 img-absolute-left" style="padding-left: 0;">
-              <img src="assets/img/konten-header/Header-Divisi.png" alt="" class="img-fluid" style="margin-top: 5rem;" />
+              <img src="assets/img/konten-header/Header-Kontak.png" alt="" class="img-fluid" style="margin-top: 5rem;" />
             </div>
             <div class="col-lg-6" style="padding-top: 12rem;"></div>
             <div class="col-lg-6" style="padding-top: 14rem;">
-              <div class="col-lg-12 text-justify">
+              <div class="col-lg-12">
                 <h1>
                   Anugerah bagi mereka yang ikhlas tanpa pamrih
                 </h1>
@@ -88,7 +88,7 @@
         <div class="container" data-aos="fade-up">
           <div class="row counters mt-5">
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
-              <img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-08.png" alt="Card image cap" />
+              <a href="https://api.whatsapp.com/send?phone=6281260384825&text=Halo%20Ketimbang%20Ngemis%20Bandung"><img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-08.png" alt="Card image cap" /></a>
               <p class="text-contact mt-4">WHATSAPP</p>
               <p class="text-contact mt-2">0813-4347-8282</p>
             </div>
@@ -100,7 +100,7 @@
             </div>
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
-              <img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-12.png" alt="Card image cap" />
+              <a href="https://line.me/R/ti/p/%40ndm3476g"><img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-12.png" alt="Card image cap" /></a>
               <p class="text-contact mt-4">LINE</p>
               <p class="text-contact mt-2">@ndm3476g</p>
             </div>
@@ -108,19 +108,19 @@
 
           <div class="row counters mt-5">
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
-              <img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-10.png" alt="Card image cap" />
+              <a href="https://www.youtube.com/channel/UCxMzx_r9fiuYYgLg_Wuj1pQ"><img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-10.png" alt="Card image cap" /></a>
               <p class="text-contact mt-4">YOUTUBE</p>
               <p class="text-contact mt-2">Ketimbang Ngemis Bandung</p>
             </div>
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
-              <img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-11.png" alt="Card image cap" />
+              <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-11.png" alt="Card image cap" /></a>
               <p class="text-contact mt-4">INSTAGRAM</p>
               <p class="text-contact mt-2">@ketimbang.ngemis.bandung</p>
             </div>
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
-              <img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-13.png" alt="Card image cap" />
+              <a href="https://id-id.facebook.com/ketimbangemis.bandung/"><img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-13.png" alt="Card image cap" /></a>
               <p class="text-contact mt-4">FACEBOOK</p>
               <p class="text-contact mt-2">Ketimbang Ngemis Bandung</p>
             </div>
@@ -196,9 +196,9 @@
 
             <div class="row">
               <div class="col mt-2">
-                <img width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-06.png" alt="" />
-                <img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-05.png" alt="" />
-                <img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-07.png" alt="" />
+                <a href="https://id-id.facebook.com/ketimbangemis.bandung/"><img width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-06.png" alt="" /></a>
+                <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-05.png" alt="" /></a>
+                <a href="https://www.youtube.com/channel/UCxMzx_r9fiuYYgLg_Wuj1pQ"><img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-07.png" alt="" /></a>
               </div>
             </div>
           </div>
@@ -208,7 +208,7 @@
           </div>
 
           <div class="col-lg-3 mt-2">
-            <h6>Address</h6>
+            <h6>Alamat</h6>
             <div class="row">
               <div class="col-lg-2 mt-1">
                 <img width="40" src="assets/img/icon/Ikon Ketimbang Ngemis-01.png" alt="" />
@@ -217,7 +217,16 @@
                 <p class="text-justify text-footer">Jalan Depok 4 No. 11 RT 02/ RW 05, Kelurahan Antapani Tengah, Kota Bandung.</p>
               </div>
               <div class="col">
-                <p class="text-address">Show Map</p>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.794122833322!2d107.65410421477283!3d-6.915200995003441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e7efe63bea99%3A0x522ee04ba85d4aa!2sJl.%20Depok%20IV%20No.11%2C%20Antapani%20Tengah%2C%20Kec.%20Antapani%2C%20Kota%20Bandung%2C%20Jawa%20Barat%2040291!5e0!3m2!1sid!2sid!4v1594548799285!5m2!1sid!2sid"
+                  width="260"
+                  height="90"
+                  frameborder="0"
+                  style="border: 0;"
+                  allowfullscreen=""
+                  aria-hidden="false"
+                  tabindex="0"
+                ></iframe>
               </div>
             </div>
           </div>
@@ -227,12 +236,7 @@
           </div>
 
           <div class="col-lg-4 mt-2">
-            <h6>Contact Us</h6>
-            <!-- <ul class="footer-links">
-              <li>0813-4347-8282</li>
-              <li>@ndm3476g</li>
-              <li>ketimbangngemis.bdg@gmail.com</li>
-            </ul> -->
+            <h6>Hubungi Kami</h6>
             <div class="row">
               <div class="col-lg-1">
                 <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-02.png" alt="" />
