--- a/divisi-medis.html
+++ b/divisi-medis.html
@@ -28,8 +28,6 @@
       <div class="container">
         <div id="logo" class="pull-left">
           <a href="index.html">Ketimbang Ngemis Bandung</a>
-          <!-- Uncomment below if you prefer to use a text logo -->
-          <!--<h1><a href="#hero">Regna</a></h1>-->
         </div>
 
         <nav id="nav-menu-container">
@@ -49,13 +47,13 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero-divisi" style="margin-top: 6rem;">
       <div class="container">
-        <div class="row" style="padding-top: 2rem;">
-          <div class="col-lg-8 mt-auto">
+        <div class="row" style="padding-top: 0.3rem;">
+          <div class="col-lg-9 mt-auto">
             <img class="img-divisi" src="assets/img/ilustrasi-divisi/Divisi-Medis.png" alt="" />
           </div>
           <!-- <div class="col-lg-2"></div> -->
-          <div class="col-lg-4 mt-auto text-right">
-            <h1>
+          <div class="col-lg-3 mt-auto text-right">
+            <h1 style="margin-bottom: 4rem;">
               Divisi Medis
             </h1>
           </div>
@@ -116,9 +114,9 @@
 
             <div class="row">
               <div class="col mt-2">
-                <img width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-06.png" alt="" />
-                <img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-05.png" alt="" />
-                <img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-07.png" alt="" />
+                <a href="https://id-id.facebook.com/ketimbangemis.bandung/"><img width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-06.png" alt="" /></a>
+                <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-05.png" alt="" /></a>
+                <a href="https://www.youtube.com/channel/UCxMzx_r9fiuYYgLg_Wuj1pQ"><img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-07.png" alt="" /></a>
               </div>
             </div>
           </div>
@@ -128,7 +126,7 @@
           </div>
 
           <div class="col-lg-3 mt-2">
-            <h6>Address</h6>
+            <h6>Alamat</h6>
             <div class="row">
               <div class="col-lg-2 mt-1">
                 <img width="40" src="assets/img/icon/Ikon Ketimbang Ngemis-01.png" alt="" />
@@ -137,7 +135,16 @@
                 <p class="text-justify text-footer">Jalan Depok 4 No. 11 RT 02/ RW 05, Kelurahan Antapani Tengah, Kota Bandung.</p>
               </div>
               <div class="col">
-                <p class="text-address">Show Map</p>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.794122833322!2d107.65410421477283!3d-6.915200995003441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e7efe63bea99%3A0x522ee04ba85d4aa!2sJl.%20Depok%20IV%20No.11%2C%20Antapani%20Tengah%2C%20Kec.%20Antapani%2C%20Kota%20Bandung%2C%20Jawa%20Barat%2040291!5e0!3m2!1sid!2sid!4v1594548799285!5m2!1sid!2sid"
+                  width="260"
+                  height="90"
+                  frameborder="0"
+                  style="border: 0;"
+                  allowfullscreen=""
+                  aria-hidden="false"
+                  tabindex="0"
+                ></iframe>
               </div>
             </div>
           </div>
@@ -147,12 +154,7 @@
           </div>
 
           <div class="col-lg-4 mt-2">
-            <h6>Contact Us</h6>
-            <!-- <ul class="footer-links">
-              <li>0813-4347-8282</li>
-              <li>@ndm3476g</li>
-              <li>ketimbangngemis.bdg@gmail.com</li>
-            </ul> -->
+            <h6>Hubungi Kami</h6>
             <div class="row">
               <div class="col-lg-1">
                 <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-02.png" alt="" />
