--- a/galeri.html
+++ b/galeri.html
@@ -148,7 +148,7 @@
           <div class="row counters mt-5">
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <div class="card border-card">
-                <img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-1.png" alt="Card image cap" />
+                <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-1.png" alt="Card image cap" /></a>
                 <div class="mid-rectangle-galeri mb-2">
                   Pak Asep
                 </div>
@@ -160,7 +160,7 @@
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <div class="card border-card">
-                <img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-2.png" alt="Card image cap" />
+                <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-2.png" alt="Card image cap" /></a>
                 <div class="mid-rectangle-galeri mb-2">
                   Ibu Sukaeni
                 </div>
@@ -172,7 +172,7 @@
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <div class="card border-card">
-                <img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-3.png" alt="Card image cap" />
+                <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-3.png" alt="Card image cap" /></a>
                 <div class="mid-rectangle-galeri mb-2">
                   Pak Mulyanto
                 </div>
@@ -186,7 +186,7 @@
           <div class="row counters">
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <div class="card border-card">
-                <img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-4.jpg" alt="Card image cap" />
+                <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-4.jpg" alt="Card image cap" /></a>
                 <div class="mid-rectangle-galeri mb-2">
                   Pak Maman
                 </div>
@@ -198,7 +198,7 @@
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <div class="card border-card">
-                <img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-5.png" alt="Card image cap" />
+                <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-5.png" alt="Card image cap" /></a>
                 <div class="mid-rectangle-galeri mb-2">
                   Pak Malik
                 </div>
@@ -210,7 +210,7 @@
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <div class="card border-card">
-                <img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-6.png" alt="Card image cap" />
+                <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-6.png" alt="Card image cap" /></a>
                 <div class="mid-rectangle-galeri mb-2">
                   Pak Ujang
                 </div>
@@ -252,7 +252,7 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6 col-sm-6 mb-4 text-center">
               <div class="card border-card">
-                <img width="508" height="296" class="card-img-top" src="assets/img/foto-konten/Galeri-7.png" alt="Card image cap" />
+                <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img width="508" height="296" class="card-img-top" src="assets/img/foto-konten/Galeri-7.png" alt="Card image cap" /></a>
               </div>
             </div>
             <div class="col-lg-3"></div>
@@ -260,7 +260,7 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6 col-sm-6 mb-4 mt-4 text-center">
               <div class="card border-card">
-                <img width="508" height="296" class="card-img-top" src="assets/img/foto-konten/Galeri-8.png" alt="Card image cap" />
+                <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img width="508" height="296" class="card-img-top" src="assets/img/foto-konten/Galeri-8.png" alt="Card image cap" /></a>
               </div>
             </div>
             <div class="col-lg-3"></div>
@@ -268,7 +268,7 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6 col-sm-6 mb-4 mt-4 text-center">
               <div class="card border-card">
-                <img width="508" height="296" class="card-img-top" src="assets/img/foto-konten/Galeri-9.png" alt="Card image cap" />
+                <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img width="508" height="296" class="card-img-top" src="assets/img/foto-konten/Galeri-9.png" alt="Card image cap" /></a>
               </div>
             </div>
             <div class="col-lg-3"></div>
@@ -276,7 +276,7 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6 col-sm-6 mb-4 mt-4 text-center">
               <div class="card border-card">
-                <img height="350" class="card-img-top" src="assets/img/foto-konten/Galeri-10.png" alt="Card image cap" />
+                <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img height="350" class="card-img-top" src="assets/img/foto-konten/Galeri-10.png" alt="Card image cap" /></a>
               </div>
             </div>
             <div class="col-lg-3"></div>
@@ -300,9 +300,9 @@
 
             <div class="row">
               <div class="col mt-2">
-                <img width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-06.png" alt="" />
-                <img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-05.png" alt="" />
-                <img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-07.png" alt="" />
+                <a href="https://id-id.facebook.com/ketimbangemis.bandung/"><img width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-06.png" alt="" /></a>
+                <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-05.png" alt="" /></a>
+                <a href="https://www.youtube.com/channel/UCxMzx_r9fiuYYgLg_Wuj1pQ"><img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-07.png" alt="" /></a>
               </div>
             </div>
           </div>
@@ -312,7 +312,7 @@
           </div>
 
           <div class="col-lg-3 mt-2">
-            <h6>Address</h6>
+            <h6>Alamat</h6>
             <div class="row">
               <div class="col-lg-2 mt-1">
                 <img width="40" src="assets/img/icon/Ikon Ketimbang Ngemis-01.png" alt="" />
@@ -321,7 +321,16 @@
                 <p class="text-justify text-footer">Jalan Depok 4 No. 11 RT 02/ RW 05, Kelurahan Antapani Tengah, Kota Bandung.</p>
               </div>
               <div class="col">
-                <p class="text-address">Show Map</p>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.794122833322!2d107.65410421477283!3d-6.915200995003441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e7efe63bea99%3A0x522ee04ba85d4aa!2sJl.%20Depok%20IV%20No.11%2C%20Antapani%20Tengah%2C%20Kec.%20Antapani%2C%20Kota%20Bandung%2C%20Jawa%20Barat%2040291!5e0!3m2!1sid!2sid!4v1594548799285!5m2!1sid!2sid"
+                  width="260"
+                  height="90"
+                  frameborder="0"
+                  style="border: 0;"
+                  allowfullscreen=""
+                  aria-hidden="false"
+                  tabindex="0"
+                ></iframe>
               </div>
             </div>
           </div>
@@ -331,12 +340,7 @@
           </div>
 
           <div class="col-lg-4 mt-2">
-            <h6>Contact Us</h6>
-            <!-- <ul class="footer-links">
-              <li>0813-4347-8282</li>
-              <li>@ndm3476g</li>
-              <li>ketimbangngemis.bdg@gmail.com</li>
-            </ul> -->
+            <h6>Hubungi Kami</h6>
             <div class="row">
               <div class="col-lg-1">
                 <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-02.png" alt="" />
