--- a/divisi.html
+++ b/divisi.html
@@ -15,9 +15,7 @@
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-    <!-- <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" /> -->
     <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet" />
-    <!-- <link href="assets/vendor/venobox/venobox.css" rel="stylesheet" /> -->
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
@@ -59,13 +57,13 @@
             <div class="col-lg-6" style="padding-top: 18rem;">
               <div class="col-lg-12 text-justify">
                 <h1>
-                  DIVISI KAMI
+                  Divisi Kami
                 </h1>
               </div>
               <div class="row">
                 <div class="col-lg-12 text-justify">
-                  <p style="padding-left: 15px;">
-                    Dalam melaksanakan kegiatan komunitas, rekan-rekan anggota kami dibagi menjadi 5 divisi yang memiliki peranannya masingmasing. Seluruh 5 divisi tersebut saling bekerja sama dan berkoordinasi untuk memaksimalkan kinerja komunitas
+                  <p style="padding-left: 15px; letter-spacing: 0.2px;">
+                    Dalam melaksanakan kegiatan komunitas, rekan-rekan anggota kami dibagi menjadi 5 divisi yang memiliki peranannya masing-masing. Seluruh 5 divisi tersebut saling bekerja sama dan berkoordinasi untuk memaksimalkan kinerja komunitas
                     dalam membantu lansia.
                   </p>
                 </div>
@@ -155,7 +153,7 @@
             </div>
             <div class="col-lg-5 align-self-center">
               <h3 class="divisi-title">Divisi Kreatif</h3>
-              <p class="text-justify">Divisi yang terdiri atas orang-orang yang memiliki ide kreatif untuk menciptakan konten-konten untuk publikasi komunitas.</p>
+              <p class="text-justify" style="letter-spacing: 0.2px;">Divisi yang terdiri atas orang-orang yang memiliki ide kreatif untuk menciptakan konten-konten untuk publikasi komunitas.</p>
             </div>
             <div class="col-lg-3 align-self-center text-center">
               <a href="divisi-kreatif.html"> <i class="arrow-right"></i></a>
@@ -180,9 +178,9 @@
 
             <div class="row">
               <div class="col mt-2">
-                <img width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-06.png" alt="" />
-                <img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-05.png" alt="" />
-                <img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-07.png" alt="" />
+                <a href="https://id-id.facebook.com/ketimbangemis.bandung/"><img width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-06.png" alt="" /></a>
+                <a href="https://www.instagram.com/ketimbang.ngemis.bandung/?hl=id"><img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-05.png" alt="" /></a>
+                <a href="https://www.youtube.com/channel/UCxMzx_r9fiuYYgLg_Wuj1pQ"><img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-07.png" alt="" /></a>
               </div>
             </div>
           </div>
@@ -192,7 +190,7 @@
           </div>
 
           <div class="col-lg-3 mt-2">
-            <h6>Address</h6>
+            <h6>Alamat</h6>
             <div class="row">
               <div class="col-lg-2 mt-1">
                 <img width="40" src="assets/img/icon/Ikon Ketimbang Ngemis-01.png" alt="" />
@@ -201,7 +199,16 @@
                 <p class="text-justify text-footer">Jalan Depok 4 No. 11 RT 02/ RW 05, Kelurahan Antapani Tengah, Kota Bandung.</p>
               </div>
               <div class="col">
-                <p class="text-address">Show Map</p>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.794122833322!2d107.65410421477283!3d-6.915200995003441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e7efe63bea99%3A0x522ee04ba85d4aa!2sJl.%20Depok%20IV%20No.11%2C%20Antapani%20Tengah%2C%20Kec.%20Antapani%2C%20Kota%20Bandung%2C%20Jawa%20Barat%2040291!5e0!3m2!1sid!2sid!4v1594548799285!5m2!1sid!2sid"
+                  width="260"
+                  height="90"
+                  frameborder="0"
+                  style="border: 0;"
+                  allowfullscreen=""
+                  aria-hidden="false"
+                  tabindex="0"
+                ></iframe>
               </div>
             </div>
           </div>
@@ -211,12 +218,7 @@
           </div>
 
           <div class="col-lg-4 mt-2">
-            <h6>Contact Us</h6>
-            <!-- <ul class="footer-links">
-              <li>0813-4347-8282</li>
-              <li>@ndm3476g</li>
-              <li>ketimbangngemis.bdg@gmail.com</li>
-            </ul> -->
+            <h6>Hubungi Kami</h6>
             <div class="row">
               <div class="col-lg-1">
                 <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-02.png" alt="" />
