Final Revisi - Done

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
             </div>
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
-              <img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-09.png" alt="Card image cap" />
+              <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&to=ketimbang.ngemis17@gmail.com&tf=1"><img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-09.png" alt="Card image cap" /></a>
               <p class="text-contact mt-4">E-MAIL</p>
               <p class="text-contact mt-2">ketimbang.ngemis17@gmail.com</p>
             </div>
@@ -222,7 +222,7 @@
                   width="260"
                   height="90"
                   frameborder="0"
-                  style="border: 0;"
+                  style="outline: white solid 3px;"
                   allowfullscreen=""
                   aria-hidden="false"
                   tabindex="0"
@@ -239,21 +239,21 @@
             <h6>Hubungi Kami</h6>
             <div class="row">
               <div class="col-lg-1">
-                <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-02.png" alt="" />
+                <a href="https://api.whatsapp.com/send?phone=6281260384825&text=Halo%20Ketimbang%20Ngemis%20Bandung"><img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-02.png" alt="" /></a>
               </div>
               <div class="col-lg-11 text-left">
                 <p class="text-footer">0813-4347-8282</p>
               </div>
 
               <div class="col-lg-1 mt-2">
-                <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-03.png" alt="" />
+                <a href="https://line.me/R/ti/p/%40ndm3476g"><img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-03.png" alt="" /></a>
               </div>
               <div class="col-lg-11 text-left mt-2">
                 <p class="text-footer">@ndm3476g</p>
               </div>
 
               <div class="col-lg-1 mt-2">
-                <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-04.png" alt="" />
+                <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&to=ketimbang.ngemis17@gmail.com&tf=1"><img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-04.png" alt="" /></a>
               </div>
               <div class="col-lg-11 text-left mt-2">
                 <p class="text-footer">ketimbang.ngemis17@gmail.com</p>
