--- a/divisi-kreatif.html
+++ b/divisi-kreatif.html
@@ -78,20 +78,19 @@
 
           <div class="row counters mt-5">
             <div class="col-lg-2 text-left" style="padding-left: 2rem;"">
-              <a href="divisi.html"><i class="arrow-left"></i></a>
-            </div>
-            <div class="col-lg-8 text-center">
-              <p>Kami bekerja dengan menerapkan ide-ide kreatif yang kami miliki ke dalam platform media sosial yang dimiliki komunitas seperti Instagram, Facebook, Youtube.</p>
-              <div class="row bg mt-5">
-                <div class="rectangle-divisi mb-2" style="padding: 20px;">
-                  MEMBUAT DESAIN KONTEN UNTUK MEDIA SOSIAL
-                </div>
-                <div class="rectangle-divisi mb-2" style="padding-left: 25px; padding-right: 25px; padding-top: 20px; padding-bottom: 20px;">
-                  MEMBANTU PUBLIKASI SOKMUL DI MEDIA SOSIAL
-                </div>
-                <div class="rectangle-divisi mb-2" style="padding: 20px;">
-                  MEMBUAT DESAIN BANNER DAN FLYER UNTUK ACARA INTERNAL
-                </div>
+            <a href="divisi.html"><i class="arrow-left"></i></a>
+          </div>
+          <div class="col-lg-8 text-center">
+            <p>Kami bekerja dengan menerapkan ide-ide kreatif yang kami miliki ke dalam platform media sosial yang dimiliki komunitas seperti Instagram, Facebook, Youtube.</p>
+            <div class="row bg mt-5">
+              <div class="rectangle-divisi mb-2" style="padding: 20px;">
+                MEMBUAT DESAIN KONTEN UNTUK MEDIA SOSIAL
+              </div>
+              <div class="rectangle-divisi mb-2" style="padding-left: 25px; padding-right: 25px; padding-top: 20px; padding-bottom: 20px;">
+                MEMBANTU PUBLIKASI SOKMUL DI MEDIA SOSIAL
+              </div>
+              <div class="rectangle-divisi mb-2" style="padding: 20px;">
+                MEMBUAT DESAIN BANNER DAN FLYER UNTUK ACARA INTERNAL
               </div>
             </div>
           </div>
@@ -140,7 +139,7 @@
                   width="260"
                   height="90"
                   frameborder="0"
-                  style="border: 0;"
+                  style="outline: white solid 3px;"
                   allowfullscreen=""
                   aria-hidden="false"
                   tabindex="0"
@@ -157,21 +156,21 @@
             <h6>Hubungi Kami</h6>
             <div class="row">
               <div class="col-lg-1">
-                <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-02.png" alt="" />
+                <a href="https://api.whatsapp.com/send?phone=6281260384825&text=Halo%20Ketimbang%20Ngemis%20Bandung"><img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-02.png" alt="" /></a>
               </div>
               <div class="col-lg-11 text-left">
                 <p class="text-footer">0813-4347-8282</p>
               </div>
 
               <div class="col-lg-1 mt-2">
-                <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-03.png" alt="" />
+                <a href="https://line.me/R/ti/p/%40ndm3476g"><img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-03.png" alt="" /></a>
               </div>
               <div class="col-lg-11 text-left mt-2">
                 <p class="text-footer">@ndm3476g</p>
               </div>
 
               <div class="col-lg-1 mt-2">
-                <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-04.png" alt="" />
+                <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&to=ketimbang.ngemis17@gmail.com&tf=1"><img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-04.png" alt="" /></a>
               </div>
               <div class="col-lg-11 text-left mt-2">
                 <p class="text-footer">ketimbang.ngemis17@gmail.com</p>
